[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://images/background_wJam1.png" type="Texture" id=2]

[node name="MainMenu" type="Spatial"]
script = ExtResource( 1 )

[node name="back" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -215.5
margin_right = 280.0
margin_bottom = 215.5
color = Color( 0, 0, 0, 0.117647 )

[node name="instructions" type="Label" parent="ColorRect"]
margin_left = 8.0
margin_top = 5.0
margin_right = 550.0
margin_bottom = 443.0
rect_min_size = Vector2( 200, 0 )
text = "v1.4

Submission for itch.io the Weekly Game Jam 120 (https://qarlos.itch.io/genesis)

How to play:
Add constructions in the planet surface by clicking into the placement points, and get to the Future starting from the Cavemen Era.
Each era is unlocked by a special construction. You must balance the population, points and resources so you can move on through the Eras.

Controls:
  Left mouse button - add construction
  Right/middle mouse button - rotate world
  Mouse wheel - zoom in/out
  F1 - low graphics detail level
  F2 - medium graphics detail level
  F3 - high graphics detail level
  F11 - toggles fullscreen

Credits:
Felipe Braga (@TheShadowWz) - art, main game design
Carlos Herrero (@qarlosherrero) - programming, some game design help
Thanks to Lauren Taylor and Jordan Thorpe for their moral support. Lauren made the nice title screen, and Jordan also contributed with some art.
"
autowrap = true

[node name="startbutton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -154.0
margin_top = -172.0
margin_right = -113.0
margin_bottom = -152.0
rect_scale = Vector2( 3, 3 )
text = "Start"

[node name="quitbutton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -154.0
margin_top = -92.0
margin_right = -113.0
margin_bottom = -71.9995
rect_scale = Vector2( 3, 3 )
text = "Quit"

[node name="easy" type="CheckBox" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -157.719
margin_top = -275.96
margin_right = -101.719
margin_bottom = -251.96
pressed = true
text = "Easy"

[node name="medium" type="CheckBox" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -157.719
margin_top = -255.96
margin_right = -76.7187
margin_bottom = -231.96
text = "Medium"

[node name="hard" type="CheckBox" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -157.719
margin_top = -235.96
margin_right = -99.7187
margin_bottom = -211.96
text = "Hard"

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -154.806
margin_top = -310.667
margin_right = -97.806
margin_bottom = -296.667
rect_scale = Vector2( 2, 2 )
text = "Difficulty"
[connection signal="pressed" from="startbutton" to="." method="_on_startbutton_pressed"]
[connection signal="pressed" from="quitbutton" to="." method="_on_quitbutton_pressed"]
[connection signal="pressed" from="easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="hard" to="." method="_on_hard_pressed"]
